Addressing issue #632 Visual clues in chat windows about unread messages.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5220 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/colors/colors.properties
+++ b/resources/colors/colors.properties
@@ -69,7 +69,7 @@ service.gui.INACTIVE_TEXT=999999
 service.gui.MENU_DISABLED_FOREGROUND=999999
 
 # Color used in tab title for non read incoming messages.
-service.gui.TAB_TITLE_HIGHLIGHT=F9750A
+service.gui.TAB_TITLE_HIGHLIGHT=DE4900
 
 # Tab default text color.
 service.gui.TAB_TITLE=474747
@@ -98,7 +98,7 @@ service.gui.GRADIENT_DARK_COLOR=E6E6E6
 service.gui.GRADIENT_LIGHT_COLOR=FFFFFF
 
 # Used for some custom borders, like the border in the chat window.
-service.gui.BORDER_COLOR=929292
+service.gui.BORDER_COLOR=8EA0BC
 
 # Splash screen text color.
 service.gui.SPLASH_SCREEN_TEXT_COLOR=333333
