Enables compile warnings so that we could make them appear on the cruisecontrol reports. This is part of the effort to resolve issue #637
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5221 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -232,6 +232,7 @@
                 <src path="${src2}"/>
                 <include name="**/*.java" />
                 <exclude name="net/java/sip/communicator/launcher/*.java" />
+                <compilerarg value="-Xlint"/>
         </javac>
         <!--
             sc-launcher.jar needs to be compatible with 1.4 in order to enable
@@ -243,6 +244,7 @@
                 <src path="${src}"/>
                 <src path="${src2}"/>
                 <include name="net/java/sip/communicator/launcher/*.java" />
+                <compilerarg value="-Xlint"/>
         </javac>
     </target>
 
