--- a/resources/colors/colors.properties
+++ b/resources/colors/colors.properties
@@ -74,6 +74,9 @@ service.gui.TAB_TITLE_HIGHLIGHT=DE4900
 # Tab default text color.
 service.gui.TAB_TITLE=474747
 
+# Tab text color for selected tabs.
+service.gui.TAB_TITLE_SELECTED=FFFFFF
+
 # Custom components GUI constants
 
 # Background color for incoming call lines in the call list.
