Chat tabbed pane look modified in order to help better distinguish selected and unselected tabs.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5276 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/colors/colors.properties
+++ b/resources/colors/colors.properties
@@ -72,10 +72,10 @@ service.gui.MENU_DISABLED_FOREGROUND=999999
 service.gui.TAB_TITLE_HIGHLIGHT=DE4900
 
 # Tab default text color.
-service.gui.TAB_TITLE=474747
+service.gui.TAB_TITLE=1B1B1B
 
 # Tab text color for selected tabs.
-service.gui.TAB_TITLE_SELECTED=FFFFFF
+service.gui.TAB_TITLE_SELECTED=000000
 
 # Custom components GUI constants
 
