--- a/resources/images/images.properties
+++ b/resources/images/images.properties
@@ -163,6 +163,10 @@ service.gui.smilies.SMILEY9=resources/images/impl/gui/common/smilies/default/smi
 service.gui.smilies.SMILEY10=resources/images/impl/gui/common/smilies/default/smiley10.gif
 service.gui.smilies.SMILEY11=resources/images/impl/gui/common/smilies/default/smiley11.gif
 service.gui.smilies.SMILEY12=resources/images/impl/gui/common/smilies/default/smiley12.gif
+service.gui.smilies.SMILEY13=resources/images/impl/gui/common/smilies/default/smiley13.gif
+service.gui.smilies.SMILEY14=resources/images/impl/gui/common/smilies/default/smiley14.gif
+service.gui.smilies.SMILEY15=resources/images/impl/gui/common/smilies/default/smiley15.gif
+service.gui.smilies.SMILEY16=resources/images/impl/gui/common/smilies/default/smiley16.gif
 
 # Look and Feel images
 service.gui.lookandfeel.CLOSE_TAB_ICON=resources/images/impl/gui/buttons/closeTab.png
