--- a/resources/config/defaults.properties
+++ b/resources/config/defaults.properties
@@ -50,6 +50,8 @@ impl.msghistory.IS_MESSAGE_HISTORY_ENABLED=true
 plugin.branding.ABOUT_LOGO_FONT_SIZE=14
 plugin.branding.ABOUT_TEXT_INDENT=180
 plugin.branding.SPLASH_SCREEN_TEXT_INDENT=190
+plugin.branding.LOADING_BUNDLE_PANEL_HEIGHT=40
+plugin.branding.LOADING_BUNDLE_PANEL_BORDER=10
 plugin.branding.ABOUT_PARAGRAPH_GAP=10
 
 # jabber accregwizz
