Fix jsmooth tmp filename when generating executable.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5291 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -70,7 +70,7 @@
       <replace  file="${inst.resrc}/windows/tmp.run.exe.jsmooth"
         token="_APP_NAME_" value="${application.name}"/>
 
-        <jsmoothgen project="${inst.resrc}/windows/run.exe.jsmooth"
+        <jsmoothgen project="${inst.resrc}/windows/tmp.run.exe.jsmooth"
             skeletonroot="${inst.resrc}/windows/skeletons"/>
 
         <delete file="${inst.resrc}/windows/tmp.run.exe.jsmooth"/>
