--- a/resources/images/images.properties
+++ b/resources/images/images.properties
@@ -150,23 +150,27 @@ service.gui.buttons.MORE_ACTIONS_ROLLOVER_BUTTON=resources/images/impl/gui/butto
 service.gui.buttons.HIDE_ACTIONS_BUTTON=resources/images/impl/gui/buttons/hideMoreActions.png
 service.gui.buttons.HIDE_ACTIONS_ROLLOVER_BUTTON=resources/images/impl/gui/buttons/hideMoreActionsRollover.png
 
-# Smilies icons
-service.gui.smilies.SMILEY1=resources/images/impl/gui/common/smilies/default/smiley1.gif
-service.gui.smilies.SMILEY2=resources/images/impl/gui/common/smilies/default/smiley2.gif
-service.gui.smilies.SMILEY3=resources/images/impl/gui/common/smilies/default/smiley3.gif
-service.gui.smilies.SMILEY4=resources/images/impl/gui/common/smilies/default/smiley4.gif
-service.gui.smilies.SMILEY5=resources/images/impl/gui/common/smilies/default/smiley5.gif
-service.gui.smilies.SMILEY6=resources/images/impl/gui/common/smilies/default/smiley6.gif
-service.gui.smilies.SMILEY7=resources/images/impl/gui/common/smilies/default/smiley7.gif
-service.gui.smilies.SMILEY8=resources/images/impl/gui/common/smilies/default/smiley8.gif
-service.gui.smilies.SMILEY9=resources/images/impl/gui/common/smilies/default/smiley9.gif
-service.gui.smilies.SMILEY10=resources/images/impl/gui/common/smilies/default/smiley10.gif
-service.gui.smilies.SMILEY11=resources/images/impl/gui/common/smilies/default/smiley11.gif
-service.gui.smilies.SMILEY12=resources/images/impl/gui/common/smilies/default/smiley12.gif
-service.gui.smilies.SMILEY13=resources/images/impl/gui/common/smilies/default/smiley13.gif
-service.gui.smilies.SMILEY14=resources/images/impl/gui/common/smilies/default/smiley14.gif
-service.gui.smilies.SMILEY15=resources/images/impl/gui/common/smilies/default/smiley15.gif
-service.gui.smilies.SMILEY16=resources/images/impl/gui/common/smilies/default/smiley16.gif
+# Smileys icons
+service.gui.smileys.SMILEY1=resources/images/impl/gui/common/smileys/default/smiley1.gif
+service.gui.smileys.SMILEY2=resources/images/impl/gui/common/smileys/default/smiley2.gif
+service.gui.smileys.SMILEY3=resources/images/impl/gui/common/smileys/default/smiley3.gif
+service.gui.smileys.SMILEY4=resources/images/impl/gui/common/smileys/default/smiley4.gif
+service.gui.smileys.SMILEY5=resources/images/impl/gui/common/smileys/default/smiley5.gif
+service.gui.smileys.SMILEY6=resources/images/impl/gui/common/smileys/default/smiley6.gif
+service.gui.smileys.SMILEY7=resources/images/impl/gui/common/smileys/default/smiley7.gif
+service.gui.smileys.SMILEY8=resources/images/impl/gui/common/smileys/default/smiley8.gif
+service.gui.smileys.SMILEY9=resources/images/impl/gui/common/smileys/default/smiley9.gif
+service.gui.smileys.SMILEY10=resources/images/impl/gui/common/smileys/default/smiley10.gif
+service.gui.smileys.SMILEY11=resources/images/impl/gui/common/smileys/default/smiley11.gif
+service.gui.smileys.SMILEY12=resources/images/impl/gui/common/smileys/default/smiley12.gif
+service.gui.smileys.SMILEY13=resources/images/impl/gui/common/smileys/default/smiley13.gif
+service.gui.smileys.SMILEY14=resources/images/impl/gui/common/smileys/default/smiley14.gif
+service.gui.smileys.SMILEY15=resources/images/impl/gui/common/smileys/default/smiley15.gif
+service.gui.smileys.SMILEY16=resources/images/impl/gui/common/smileys/default/smiley16.gif
+service.gui.smileys.SMILEY17=resources/images/impl/gui/common/smileys/default/smiley17.gif
+service.gui.smileys.SMILEY18=resources/images/impl/gui/common/smileys/default/smiley18.gif
+service.gui.smileys.SMILEY19=resources/images/impl/gui/common/smileys/default/smiley19.gif
+service.gui.smileys.SMILEY20=resources/images/impl/gui/common/smileys/default/smiley20.gif
 
 # Look and Feel images
 service.gui.lookandfeel.CLOSE_TAB_ICON=resources/images/impl/gui/buttons/closeTab.png
