--- a/build.xml
+++ b/build.xml
@@ -1944,7 +1944,7 @@ javax.swing.event, javax.swing.border"/>
         <jar compress="true" destfile="${bundles.dest}/zrtp4j.jar"
             filesetmanifest="merge">
 
-            <zipfileset src="${lib.noinst}/zrtp4j-1.4.4.jar" prefix=""/>
+            <zipfileset src="${lib.noinst}/zrtp4j-light.jar" prefix=""/>
             <manifest>
                 <attribute name="Export-Package" value="gnu.java.zrtp,gnu.java.zrtp.packets,
                   gnu.java.zrtp.utils,gnu.java.zrtp.zidfile,
@@ -1953,7 +1953,7 @@ javax.swing.event, javax.swing.border"/>
                   org.bouncycastle.crypto.modes"/>
                 <attribute name="Bundle-Name" value="ZRTP4J"/>
                 <attribute name="Bundle-Description" value="ZRTP for Java library."/>
-                <attribute name="Bundle-Version" value="1.4.4"/>
+                <attribute name="Bundle-Version" value="1.4.5"/>
                 <attribute name="System-Bundle" value="yes"/>
             </manifest>
         </jar>
