Fix windows builds.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5324 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -53,7 +53,8 @@
             classname="net.charabia.jsmoothgen.ant.JSmoothGen"
             classpath="${inst.resrc}/windows/jsmoothgen-ant.jar"/>
     </target>
-    <target name="windows-generate-exe" depends="define-jsmooth-task">
+    <target name="windows-generate-exe" depends="define-jsmooth-task"
+            if="application.home.dirname">
 
         <copy file="${inst.resrc}/windows/run.exe.jsmooth"
             tofile="${inst.resrc}/windows/tmp.run.exe.jsmooth"/>
