- Addressing issue #465 (Redesign the account configuration menu). - Fixing issue with status update within the accounts configuration form. - Adding support for 32x32 and 48x48 icons for all protocols. - Changing the background and selection colors for config forms list on the left of the Options window.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5334 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/colors/colors.properties
+++ b/resources/colors/colors.properties
@@ -128,7 +128,7 @@ service.gui.TOOL_BAR_FOREGROUND=FFFFFF
 plugin.simpleaccreg.ACCOUNT_REGISTRATION_BACKGROUND=C2CEE0
 
 # Contact list contact row color.
-service.gui.CONTACT_LIST_ROW=ADD2EF
+service.gui.LIST_ROW=E7E7E7
 
 # Contact list group row background color.
 service.gui.CONTACT_LIST_GROUP_ROW=D3D3D3
