--- a/resources/images/images.properties
+++ b/resources/images/images.properties
@@ -217,33 +217,46 @@ service.systray.MESSAGE_ICON_MACOSX_WHITE=resources/images/impl/systray/envelope
 service.systray.CONFIGURE_ICON=resources/images/impl/gui/common/configureIcon.png
 
 # dict protocol icons
-service.protocol.dict.PROTOCOL_ICON=resources/images/protocol/dict/dict-16x16.png
-service.protocol.dict.PROTOCOL_LARGE_ICON=resources/images/protocol/dict/dict-64x64.png
+service.protocol.dict.DICT_16x16=resources/images/protocol/dict/dict-16x16.png
+service.protocol.dict.DICT_32x32=resources/images/protocol/dict/dict-32x32.png
+service.protocol.dict.DICT_48x48=resources/images/protocol/dict/dict-48x48.png
+service.protocol.dict.DICT_64x64=resources/images/protocol/dict/dict-64x64.png
 service.protocol.dict.OFFLINE_STATUS_ICON=resources/images/protocol/dict/dict-16x16-offline.png
 
 # icq protocol icons
-service.protocol.icq.PROTOCOL_ICON=resources/images/protocol/icq/icq16x16-online.png
-service.protocol.icq.PROTOCOL_LARGE_ICON=resources/images/protocol/icq/icq64x64.png
+service.protocol.icq.ICQ_16x16=resources/images/protocol/icq/icq16x16-online.png
+service.protocol.icq.ICQ_32x32=resources/images/protocol/icq/icq32x32.png
+service.protocol.icq.ICQ_48x48=resources/images/protocol/icq/icq48x48.png
+service.protocol.icq.ICQ_64x64=resources/images/protocol/icq/icq64x64.png
+service.protocol.icq.CONNECTING=resources/images/protocol/icq/cr16-action-icq_connecting-1.gif
 
 # yahoo protocol icons
-service.protocol.yahoo.PROTOCOL_ICON=resources/images/protocol/yahoo/yahoo16x16.png
-service.protocol.yahoo.PROTOCOL_LARGE_IMAGE=resources/images/protocol/yahoo/yahoo64x64.png
+service.protocol.yahoo.YAHOO_16x16=resources/images/protocol/yahoo/yahoo16x16.png
+service.protocol.yahoo.YAHOO_32x32=resources/images/protocol/yahoo/yahoo32x32.png
+service.protocol.yahoo.YAHOO_48x48=resources/images/protocol/yahoo/yahoo48x48.png
+service.protocol.yahoo.YAHOO_64x64=resources/images/protocol/yahoo/yahoo64x64.png
 
 # zeroconf protocol icons
-service.protocol.zeroconf.PROTOCOL_ICON=resources/images/protocol/zeroconf/zeroconf-color-16.png
-service.protocol.zeroconf.PROTOCOL_LARGE_ICON=resources/images/protocol/zeroconf/zeroconf-color-64.png
+service.protocol.zeroconf.ZEROCONF_16x16=resources/images/protocol/zeroconf/zeroconf16x16.png
+service.protocol.zeroconf.ZEROCONF_32x32=resources/images/protocol/zeroconf/zeroconf32x32.png
+service.protocol.zeroconf.ZEROCONF_48x48=resources/images/protocol/zeroconf/zeroconf48x48.png
+service.protocol.zeroconf.ZEROCONF_64x64=resources/images/protocol/zeroconf/zeroconf64x64.png
 service.protocol.zeroconf.ONLINE_STATUS_ICON=resources/images/protocol/zeroconf/zeroconf-online.png
 service.protocol.zeroconf.OFFLINE_STATUS_ICON=resources/images/protocol/zeroconf/zeroconf-offline.png
 service.protocol.zeroconf.DND_STATUS_ICON=resources/images/protocol/zeroconf/zeroconf-dnd.png
 service.protocol.zeroconf.INVISIBLE_STATUS_ICON=resources/images/protocol/zeroconf/zeroconf-invisible.png
 
 #msn accregwizz
-service.protocol.msn.PROTOCOL_ICON=resources/images/protocol/msn/msn16x16.png
-service.protocol.msn.PROTOCOL_LARGE_ICON=resources/images/protocol/msn/msn64x64.png
+service.protocol.msn.MSN_16x16=resources/images/protocol/msn/msn16x16.png
+service.protocol.msn.MSN_32x32=resources/images/protocol/msn/msn32x32.png
+service.protocol.msn.MSN_48x48=resources/images/protocol/msn/msn48x48.png
+service.protocol.msn.MSN_64x64=resources/images/protocol/msn/msn64x64.png
 
 # ssh protocol icons
-service.protocol.ssh.PROTOCOL_ICON=resources/images/protocol/ssh/ssh-online.png
-service.protocol.ssh.PROTOCOL_LARGE_ICON=resources/images/protocol/ssh/ssh64x64.png
+service.protocol.ssh.SSH_16x16=resources/images/protocol/ssh/ssh-online.png
+service.protocol.ssh.SSH_32x32=resources/images/protocol/ssh/ssh32x32.png
+service.protocol.ssh.SSH_48x48=resources/images/protocol/ssh/ssh48x48.png
+service.protocol.ssh.SSH_64x64=resources/images/protocol/ssh/ssh64x64.png
 service.protocol.ssh.OFFLINE_STATUS_ICON=resources/images/protocol/ssh/ssh-offline.png
 service.protocol.ssh.NA_STATUS_ICON=resources/images/protocol/ssh/ssh-na.png
 service.protocol.ssh.CONNECTING_ICON=resources/images/protocol/ssh/ssh-connecting.png
@@ -251,17 +264,21 @@ service.protocol.ssh.CONNECTED_ICON=resources/images/protocol/ssh/ssh-connected.
 service.protocol.ssh.FILE_TRANSFER_ICON=resources/images/protocol/ssh/ssh-filetransfer.png
 
 # rss accregwizz
-service.protocol.rss.PROTOCOL_ICON=resources/images/protocol/rss/rss-online.png
-service.protocol.rss.PROTOCOL_LARGE_ICON=resources/images/protocol/rss/rss64x64.png
+service.protocol.rss.RSS_16x16=resources/images/protocol/rss/rss-online.png
+service.protocol.rss.RSS_32x32=resources/images/protocol/rss/rss32x32.png
+service.protocol.rss.RSS_48x48=resources/images/protocol/rss/rss48x48.png
+service.protocol.rss.RSS_64x64=resources/images/protocol/rss/rss64x64.png
 service.protocol.rss.OFFLINE_STATUS_ICON=resources/images/protocol/rss/rss-offline.png
 
 # sip protocol icons
-service.protocol.sip.PROTOCOL_ICON=resources/images/protocol/sip/sip16x16.png
-service.protocol.sip.PROTOCOL_LARGE_ICON=resources/images/protocol/sip/sip64x64.png
+service.protocol.sip.SIP_16x16=resources/images/protocol/sip/sip16x16.png
+service.protocol.sip.SIP_64x64=resources/images/protocol/sip/sip64x64.png
 
 # gibberish protocol icons
-service.protocol.gibberish.PROTOCOL_ICON=resources/images/protocol/gibberish/gibberish-online.png
-service.protocol.gibberish.PROTOCOL_LARGE_ICON=resources/images/protocol/gibberish/gibberish64x64.png
+service.protocol.gibberish.GIBBERISH_16x16=resources/images/protocol/gibberish/gibberish-online.png
+service.protocol.gibberish.GIBBERISH_32x32=resources/images/protocol/gibberish/gibberish32x32.png
+service.protocol.gibberish.GIBBERISH_48x48=resources/images/protocol/gibberish/gibberish48x48.png
+service.protocol.gibberish.GIBBERISH_64x64=resources/images/protocol/gibberish/gibberish64x64.png
 service.protocol.gibberish.OFFLINE_STATUS_ICON=resources/images/protocol/gibberish/gibberish-offline.png
 service.protocol.gibberish.OCCUPIED_STATUS_ICON=resources/images/protocol/gibberish/gibberish-occupied.png
 service.protocol.gibberish.DND_STATUS_ICON=resources/images/protocol/gibberish/gibberish-dnd.png
@@ -272,27 +289,31 @@ service.protocol.gibberish.ONLINE_STATUS_ICON=resources/images/protocol/gibberis
 service.protocol.gibberish.FFC_STATUS_ICON=resources/images/protocol/gibberish/gibberish-ffc.png
 
 # aim protocol icons
-service.protocol.aim.PROTOCOL_ICON=resources/images/protocol/aim/aim16x16-online.png
-service.protocol.aim.PROTOCOL_LARGE_ICON=resources/images/protocol/aim/aim64x64.png
+service.protocol.aim.AIM_16x16=resources/images/protocol/aim/aim16x16-online.png
+service.protocol.aim.AIM_32x32=resources/images/protocol/aim/aim32x32.png
+service.protocol.aim.AIM_48x48=resources/images/protocol/aim/aim48x48.png
+service.protocol.aim.AIM_64x64=resources/images/protocol/aim/aim64x64.png
 service.protocol.aim.INVISIBLE_STATUS_ICON=resources/images/protocol/aim/aim16x16-invisible.png
 service.protocol.aim.AWAY_STATUS_ICON=resources/images/protocol/aim/aim16x16-away.png
 service.protocol.aim.OFFLINE_STATUS_ICON=resources/images/protocol/aim/aim16x16-offline.png
 service.protocol.aim.CONNECTING_ICON=resources/images/protocol/aim/cr16-action-aim_connecting.gif
 
 # irc protocol icons
-service.protocol.irc.PROTOCOL_ICON=resources/images/protocol/irc/cr16-action-irc_online.png
-service.protocol.irc.PROTOCOL_LARGE_ICON=resources/images/protocol/irc/cr64-app-irc_protocol.png
+service.protocol.irc.IRC_16x16=resources/images/protocol/irc/cr16-action-irc_online.png
+service.protocol.irc.IRC_32x32=resources/images/protocol/irc/irc32x32.png
+service.protocol.irc.IRC_48x48=resources/images/protocol/irc/irc48x48.png
+service.protocol.irc.IRC_64x64=resources/images/protocol/irc/irc64x64.png
 service.protocol.irc.OFFLINE_STATUS_ICON=resources/images/protocol/irc/cr16-action-irc_offline.png
 service.protocol.irc.AWAY_STATUS_ICON=resources/images/protocol/gibberish/gibberish-away.png
 service.protocol.irc.CONNECTING_ICON=resources/images/protocol/irc/cr16-action-irc_connecting-1.gif
 
 # jabber protocol icons
-service.protocol.jabber.PROTOCOL_ICON=resources/images/protocol/jabber/status16x16-online.png
-service.protocol.jabber.PROTOCOL_LARGE_ICON=resources/images/protocol/jabber/logo48x48.png
+service.protocol.jabber.JABBER_16x16=resources/images/protocol/jabber/status16x16-online.png
+service.protocol.jabber.JABBER_64x64=resources/images/protocol/jabber/logo48x48.png
 
 # googletalk accregwizz
-service.protocolgoogletalk.PROTOCOL_ICON=resources/images/protocol/googletalk/status16x16-online.png
-service.protocolgoogletalk.PROTOCOL_LARGE_ICON=resources/images/protocol/googletalk/logo48x48.png
+service.protocol.googletalk.GTALK_16x16=resources/images/protocol/googletalk/status16x16-online.png
+service.protocol.googletalk.GTALK_64x64=resources/images/protocol/googletalk/logo48x48.png
 
 # branding plugin images
 plugin.branding.ABOUT_WINDOW_BACKGROUND=resources/images/plugin/branding/aboutWindowBackground.png
