- The protocol bundle was importing all image resources, instead of just the one it needs. This is now fixed by adding separate zipfileset entry for each protocol resource used in the protocol bundle. - Unused resource removed.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5336 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1133,7 +1133,13 @@ javax.swing.event, javax.swing.border"/>
                 <type type="file" />
             </zipfileset>
             <zipfileset dir="${resources}/images"
-                prefix="resources/images"/>
+                prefix="resources/images">
+                <include name="protocol/icq/**/*"/>
+                <include name="protocol/googletalk/**/*"/>
+                <include name="protocol/jabber/**/*"/>
+                <include name="protocol/msn/**/*"/>
+                <include name="protocol/yahoo/**/*"/>
+            </zipfileset> 
         </jar>
     </target>
 
@@ -1387,8 +1393,6 @@ javax.swing.event, javax.swing.border"/>
             manifest="${src}/net/java/sip/communicator/plugin/googletalkaccregwizz/googletalkaccregwizz.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/plugin/googletalkaccregwizz"
                 prefix="net/java/sip/communicator/plugin/googletalkaccregwizz"/>
-            <zipfileset dir="${resources}/images/protocol/googletalk"
-                prefix="resources/images/protocol/googletalk"/>
         </jar>
     </target>
 
