Adding support for file transfer for XMPP and graphical User Interface for file transfer (ongoing work). This first commit adds the needed gui that enables users to send and receive files, to drag and drop files into chat windows. It displays incoming file notifications, file icons or previews (where possible, e.g. images). This work package also contains a first file transfer implementation over the XMPP protocol (using the smack implementation of xep-0096: http://xmpp.org/extensions/xep-0096.html). Unfortunately this implementation won't work very well with GoogleTalk accounts for now, as Google servers seem to block every file bigger than 60K.
This commit contains also some improvements in the way we load the history and we manage error messages in the gui.

git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5380 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -791,7 +791,7 @@
         bundle-version,bundle-version-impl,bundle-shutdown,
         bundle-growlnotification,bundle-swingnotification,bundle-sparkle,
         bundle-audionotifier,bundle-plugin-branding,
-        bundle-systray,bundle-browserlauncher,bundle-gibberish,
+        bundle-osdependent,bundle-browserlauncher,bundle-gibberish,
         bundle-gibberish-slick,bundle-plugin-gibberishaccregwizz,
       bundle-plugin-call-history-form,
         bundle-rss, bundle-rss-slick,bundle-plugin-rssaccregwizz,
@@ -1548,16 +1548,18 @@ javax.swing.event, javax.swing.border"/>
             </jar>
         </target>
 
-    <!--BUNDLE-SYSTRAY-->
-    <target name="bundle-systray">
-        <!-- Creates a bundle for the Systray plugin."-->
+    <!--BUNDLE-OSDEPENDENT-->
+    <target name="bundle-osdependent">
+        <!-- Creates a bundle for the OS dependent packages like systray and desktop."-->
         <jar
-            compress="false" destfile="${bundles.dest}/systray.jar"
-            manifest="${src}/net/java/sip/communicator/impl/systray/systray.manifest.mf">
+            compress="false" destfile="${bundles.dest}/osdependent.jar"
+            manifest="${src}/net/java/sip/communicator/impl/osdependent/osdependent.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/service/systray"
                 prefix="net/java/sip/communicator/service/systray"/>
-            <zipfileset dir="${dest}/net/java/sip/communicator/impl/systray"
-                prefix="net/java/sip/communicator/impl/systray"/>
+            <zipfileset dir="${dest}/net/java/sip/communicator/service/desktop"
+                prefix="net/java/sip/communicator/service/desktop"/>
+            <zipfileset dir="${dest}/net/java/sip/communicator/impl/osdependent"
+                prefix="net/java/sip/communicator/impl/osdependent"/>
             <zipfileset src="${lib.mac.noinst}/dock.jar" prefix=""/>
         </jar>
     </target>
