--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -49,7 +49,8 @@ org.osgi.framework.system.packages.extra= org.osgi.framework; version=1.3.0, \
  net.java.sip.communicator.util.launchutils; \
  javax.crypto; \
  javax.crypto.spec; \
- javax.crypto.interfaces;
+ javax.crypto.interfaces; \
+ sun.awt.shell;
 
 felix.auto.start.10= \
  reference:file:lib/bundle/org.apache.felix.bundlerepository-1.0.0.jar
@@ -124,7 +125,7 @@ felix.auto.start.66= \
  reference:file:sc-bundles/swing-ui.jar \
  reference:file:sc-bundles/updatechecker.jar \
  reference:file:sc-bundles/swingnotification.jar \
- reference:file:sc-bundles/systray.jar
+ reference:file:sc-bundles/osdependent.jar
 
 felix.auto.start.67= \
  reference:file:sc-bundles/pluginmanager.jar \
