--- a/resources/colors/colors.properties
+++ b/resources/colors/colors.properties
@@ -163,3 +163,17 @@ service.gui.MAIN_BACKGROUND_GRADIENT=E1F0FD
 service.gui.FAVORITES_PANEL_BACKGROUND=474747
 
 service.gui.FAVORITES_PANEL_BACKGROUND_GRADIENT=999999
+
+# Chat window conversation area component background color (used to display
+# file transfer, etc.).
+service.gui.CHAT_CONVERSATION_COMPONENT=E1F0FD
+
+# Chat window conversation area component background color to indicate warning
+# (used to display file transfer, etc.).
+service.gui.CHAT_CONVERSATION_WARNING_COMPONENT=FFECE4
+
+# Foreground color used to display errors.
+service.gui.ERROR_FOREGROUND=CC0000
+
+# Foreground color for links in chat window conversation area.
+service.gui.CHAT_LINK_COLOR=4A9BDB
