--- a/resources/images/images.properties
+++ b/resources/images/images.properties
@@ -76,6 +76,7 @@ service.gui.icons.JOIN_AS_ICON=resources/images/impl/gui/common/join.png
 service.gui.icons.LEAVE_ICON=resources/images/impl/gui/common/leave.png
 service.gui.icons.HOLD_STATUS_ICON=resources/images/impl/gui/common/holdStatusIcon.png
 service.gui.icons.MUTE_STATUS_ICON=resources/images/impl/gui/common/muteStatusIcon.png
+service.gui.icons.DEFAULT_FILE_ICON=resources/images/impl/gui/common/defaultFileIcon.png
 
 # Status icons
 service.gui.statusicons.USER_ONLINE_ICON=resources/images/impl/gui/common/statusicons/online.png
@@ -193,6 +194,10 @@ service.gui.lookandfeel.SCROLLBAR_HORIZONTAL=resources/images/impl/gui/lookandfe
 service.gui.lookandfeel.SCROLLBAR_VERTICAL=resources/images/impl/gui/lookandfeel/scrollbar_vert1.png
 service.gui.lookandfeel.SCROLLBAR_THUMB_HORIZONTAL=resources/images/impl/gui/lookandfeel/horizThumbHandle.png
 service.gui.lookandfeel.SCROLLBAR_THUMB_VERTICAL=resources/images/impl/gui/lookandfeel/vertThumbHandle.png
+
+service.gui.htmllookandfeel.PROGRESS_BAR_DEFAULT_BG=resources/images/impl/gui/common/bg_bar.gif
+service.gui.htmllookandfeel.PROGRESS_BAR_BG=resources/images/impl/gui/common/bar.gif
+service.gui.htmllookandfeel.PROGRESS_BAR_COVER_BG=resources/images/impl/gui/common/bg_cover.gif
 
 # systray
 service.systray.TRAY_ICON=resources/images/impl/systray/systrayIcon.png
