Updates felix.unit.test.properties with the latest changes from felix.client.run.properties
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5385 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -45,14 +45,11 @@ org.osgi.framework.system.packages.extra= org.osgi.framework; ; version=1.3.0, \
  org.jdesktop.jdic.tray; \
  com.apple.cocoa.application; \
  net.java.sip.communicator.service.audionotifier; \
- org.bouncycastle.crypto; \
- org.bouncycastle.crypto.digests; \
- org.bouncycastle.crypto.macs; \
- org.bouncycastle.crypto.params; \
- org.bouncycastle.crypto.agreement; \
- org.bouncycastle.crypto.generators; \
- org.bouncycastle.crypto.modes; \
- org.bouncycastle.crypto.engines;
+ javax.crypto; \
+ javax.crypto.spec; \
+ javax.crypto.interfaces; \
+ sun.awt.shell;
+
 
 #
 # In case you want testing to run using oscar's graphical ui then uncomment
@@ -107,7 +104,6 @@ felix.auto.start.6= \
  reference:file:sc-bundles/meta-cl.jar \
  reference:file:sc-bundles/msghistory.jar \
  reference:file:sc-bundles/callhistory.jar \
- reference:file:sc-bundles/systray.jar \
  reference:file:sc-bundles/notification.jar
 
 felix.auto.start.7= \
