Fix unit test dependencies.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5386 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -86,6 +86,7 @@ felix.auto.start.4= \
  reference:file:sc-bundles/netaddr.jar
 
 felix.auto.start.5= \
+ reference:file:sc-bundles/zrtp4j.jar \
  reference:file:sc-bundles/protocol.jar
 
 felix.auto.start.6= \
@@ -104,7 +105,8 @@ felix.auto.start.6= \
  reference:file:sc-bundles/meta-cl.jar \
  reference:file:sc-bundles/msghistory.jar \
  reference:file:sc-bundles/callhistory.jar \
- reference:file:sc-bundles/notification.jar
+ reference:file:sc-bundles/notification.jar \
+ reference:file:sc-bundles/osdependent.jar
 
 felix.auto.start.7= \
  reference:file:sc-bundles/slickless.jar \
