Fix PopupMessageHandler tests.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5387 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -43,6 +43,7 @@ org.osgi.framework.system.packages.extra= org.osgi.framework; ; version=1.3.0, \
  gnu.java.zrtp.zidfile; \
  com.apple.cocoa.foundation; \
  org.jdesktop.jdic.tray; \
+ org.jdesktop.jdic.desktop; \
  com.apple.cocoa.application; \
  net.java.sip.communicator.service.audionotifier; \
  javax.crypto; \
