--- a/resources/sounds/sounds.properties
+++ b/resources/sounds/sounds.properties
@@ -1,4 +1,5 @@
 INCOMING_MESSAGE=resources/sounds/incomingMessage.wav
+INCOMING_FILE=resources/sounds/incomingMessage.wav
 INCOMING_CALL=resources/sounds/incomingCall.wav
 OUTGOING_CALL=resources/sounds/ring.wav
 
